# yukuzlogistika-bot

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py  unified_bot.py
app/: city_database.py  config.py  country_handlers.py  db.py  group_integration.py  keyboards.py  main.py  middlewares.py  models.py  telegram_parser.py  texts.py  utils.py
app/routers/: __init__.py  admin.py  cargo.py  common.py  detail_view.py  language.py  post_load.py  post_truck.py  search.py  start.py  transport.py
app/services/: __init__.py  data_service.py
app/templates/: post_load.txt  post_truck.txt
