[project]
name = "yulogi-bot"
version = "0.1.0"
description = "Telegram логистика: объявления грузов и транспорта"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.13.1",
  "pydantic>=2.8",
  "SQLAlchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "python-dotenv>=1.0",
]

[tool.black]
line-length = 100
